# lswapi

./: .flake8  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
lswapi/: __init__.py  __main__.py  api.py  resources.py
lswapi/httpie/: __init__.py  plugins.py
src/lswapi/: __init__.py  httpie.py
src/lswapi/aio/: __init__.py  client.py  middleware.py  oauth.py
src/lswapi/requests/: __init__.py  oauth.py  session.py
tests/: test_aio.py  test_lswapi.py  test_requests.py
