[project]
name = "lswapi"
version = "0.5.2"
description = "a python client library for easy leaseweb api access"
authors = [
    {name = "Nico Di Rocco",email = "n.dirocco@global.leaseweb.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
]

[project.urls]
Homepage = "http://developer.leaseweb.com"
Issues = "https://github.com/nrocco/lswapi"


[project.entry-points."httpie.plugins.auth.v1"]
httpie_lswapi = "lswapi.httpie:ApiAuthPlugin"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
requests-mock = "^1.12.1"


[tool.poetry.group.httpie.dependencies]
httpie = "^3.2.4"


[tool.poetry.group.requests.dependencies]
requests = "^2.32.4"


[tool.poetry.group.aio.dependencies]
aiodns = "^3.5.0"
aiohttp = "^3.12.15"


[tool.pytest.ini_options]
testpaths = ["tests"]

