[project]
name = "lswapi"
dynamic = ["version"]
description = "a python client library for easy leaseweb api access"
authors = [
    { name="Nico Di Rocco", email="n.dirocco@global.leaseweb.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = []

[project.urls]
Homepage = "http://developer.leaseweb.com"
Issues = "https://github.com/nrocco/lswapi"

[project.optional-dependencies]
develop = [
    "flake8",
    "pytest",
    "pytest-cov",
    "requests-mock",
]
publish = [
    "build",
    "twine",
]
httpie = [
    "httpie",
]
requests = [
    "requests",
]
aio = [
    "aiodns",
    "aiohttp",
]

[project.entry-points."httpie.plugins.auth.v1"]
httpie_lswapi = "lswapi.httpie:ApiAuthPlugin"

[build-system]
requires = [
    "setuptools>=80",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = ".version"}

[tool.pytest.ini_options]
testpaths = ["tests"]
